--- a/src/main/webapp/app/entities/venta/venta-detail.component.html
+++ b/src/main/webapp/app/entities/venta/venta-detail.component.html
@@ -21,6 +21,10 @@
                 <dd>
                     <span>{{venta.montoTotal}}</span>
                 </dd>
+                <dt><span>Dias Credito</span></dt>
+                <dd>
+                    <span>{{venta.diasCredito}}</span>
+                </dd>
                 <dt><span>Fecha</span></dt>
                 <dd>
                     <span>{{venta.fecha}}</span>
