--- a/frontend/src/app/ventas/sell/sell-extra-info.component.html
+++ b/frontend/src/app/ventas/sell/sell-extra-info.component.html
@@ -66,6 +66,12 @@
       </mat-form-field>
     </div>
 
+    <div fxFlex="50" class="p-10" *ngIf="isCredit">
+      <mat-form-field>
+        <input matInput placeholder="Dias de credito" name="creditPaymentDay" type="text" maxlength="10" (keypress)="checkNumbersOnly($event)" [(ngModel)]="data.entity.diasCredito">
+      </mat-form-field>
+    </div>
+
     <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
       <mat-form-field>
         <input matInput placeholder="Glosa" name="Glosa" type="text" maxlength="150" [(ngModel)]="data.entity.glosa">
@@ -82,6 +88,6 @@
   </div>
 </div>
 <div style="width: 100%;" mat-dialog-actions>
-  <button style="background-color: #1ab394; color: white; border-radius: initial; width:72%" mat-button tabindex="2" (click)="closeAndCheckSell('pay')" [disabled]="validateDocumentCodeInvalid()">Pagar</button>
+  <button style="background-color: #1ab394; color: white; border-radius: initial; width:72%" mat-button tabindex="2" (click)="closeAndCheckSell('pay')" [disabled]="validatePaymentInvalid()">Pagar</button>
   <button style="width: 25%;" mat-button tabindex="-1" (click)="closeAndCheckSell('save')">Guardar</button>
 </div>
