--- a/frontend/src/app/ventas/sell/sell-extra-info.component.html
+++ b/frontend/src/app/ventas/sell/sell-extra-info.component.html
@@ -29,20 +29,21 @@
       </mat-form-field>
     </div>
 
+    <div fxFlex.gt-sm="50" fxFlex="100" class="p-10"></div>
     <!-- column -->
-    <div fxFlex.gt-sm="60" fxFlex="100" class="p-10">
+    <div fxFlex.gt-sm="30" fxFlex="100" class="p-10">
       <mat-form-field>
         <input matInput placeholder="Cliente / Razón Social" name="Cliente / Razón Social" type="text" maxlength="150" [(ngModel)]="data.client.nombre" disabled>
       </mat-form-field>
     </div>
 
-    <div fxFlex.gt-sm="40" fxFlex="100" class="p-10">
+    <div fxFlex.gt-sm="30" fxFlex="100" class="p-10">
       <mat-form-field>
         <input matInput placeholder="Dni o Ruc" name="Dni o Ruc" type="text" maxlength="11" [(ngModel)]="amortization.codigoDocumento" disabled>
       </mat-form-field>
     </div>
 
-    <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
+    <div fxFlex.gt-sm="40" fxFlex="100" class="p-10">
       <mat-form-field>
         <input matInput placeholder="Dirección" name="Dirección" type="text" maxlength="150" [(ngModel)]="data.client.direccion" disabled>
       </mat-form-field>
