--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -17,9 +17,9 @@
   </div>
 </div>
 
-<div fxLayout="row wrap">
+<div fxLayout="row wrap" style="position: absolute; height: 100%;">
   <mat-card fxFlex.gt-lg="50" fxFlex.gt-md="50" fxFlex.gt-sm="50" fxFlex="100">
-    <mat-card-content style="height: 100%">
+    <mat-card-content>
 
       <div fxLayout="row wrap">
         <div style="display: flex; width: 100%">
