fix product card

--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -65,13 +65,13 @@ cursor: pointer;
   width: 90%;
 }
 
-.oh:hover,
-.oh:focus{
+//.oh:hover,
+//.oh:focus{
 
-  .mat-card-image{
-    height: 95px;
-  }
-}
+  //.mat-card-image{
+    //height: 95px;
+  //}
+//}
 
 .mat-row.mat-row.ng-star-inserted:hover,
 .mat-row.mat-row.ng-star-inserted:focus{
