--- a/frontend/src/app/inventory/product/product-update.component.html
+++ b/frontend/src/app/inventory/product/product-update.component.html
@@ -143,7 +143,7 @@
               <mat-header-cell *matHeaderCellDef> Cantidad </mat-header-cell>
               <mat-cell *matCellDef="let row;let i = index">
                 <span class="header-label">Cantidad:</span>
-                <input matInput placeholder="Cantidad" type="text" maxlength="10" (keypress)="checkNumbersOnly($event)" (blur)="saveChangesInVariantRow($event, i, 'cantidad')" value="{{row.cantidad}}">
+                <input matInput placeholder="Cantidad" type="text" maxlength="10" (keypress)="checkNumbersDecimalOnly($event)" (blur)="saveChangesInVariantRow($event, i, 'cantidad')" value="{{row.cantidad}}">
               </mat-cell>
             </ng-container>
 
@@ -186,7 +186,7 @@
                 <mat-header-cell *matHeaderCellDef> Cantidad </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Cantidad:</span>
-                  <input *ngIf="row.esPrincipal" matInput placeholder="Cantidad" type="text" maxlength="10" (keypress)="checkNumbersOnly($event)" value="{{row.cantidad}}" (blur)="updateStock($event)">
+                  <input *ngIf="row.esPrincipal" matInput placeholder="Cantidad" type="text" maxlength="10" (keypress)="checkNumbersDecimalOnly($event)" value="{{row.cantidad}}" (blur)="updateStock($event)">
                   <div *ngIf="!row.esPrincipal">
                     <span class="header-label">Cantidad:</span>
                     {{parseFloatCustom(row.cantidad)}}
