--- a/frontend/src/app/ventas/sell/sell-extra-info.component.html
+++ b/frontend/src/app/ventas/sell/sell-extra-info.component.html
@@ -81,11 +81,11 @@
   </div>
 
   <div fxLayout="row wrap">
-    <h1 mat-dialog-title style="width: 100%; text-align: center;">Total : S/ {{amortization.montoPagado}}</h1>
+    <h1 mat-dialog-title style="width: 100%; text-align: center;">Total : S/ {{data.entity.montoTotal}}</h1>
   </div>
 
   <div fxLayout="row wrap">
-    <h1 mat-dialog-title style="width: 100%; text-align: center; color:#30ad80">Vuelto : {{parseFloatCustom(amortization.montoPagado - data.entity.montoTotal)}} soles</h1>
+    <h1 mat-dialog-title style="width: 100%; text-align: center; color:#30ad80">Vuelto : {{parseFloatCustom(amortization.montoPagado - data.entity.montoTotal) < 0 ? 0 : parseFloatCustom(amortization.montoPagado - data.entity.montoTotal)}} soles</h1>
   </div>
 </div>
 <div style="width: 100%;" mat-dialog-actions>
