--- a/frontend/src/app/ventas/sell/sell-detail.component.html
+++ b/frontend/src/app/ventas/sell/sell-detail.component.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div fxLayout="row wrap">
+<div fxLayout="row wrap" style="    position: relative;overflow: scroll;height: -webkit-fill-available;">
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
