return style in new client grid

--- a/frontend/src/app/ventas/sell/sell-detail.component.html
+++ b/frontend/src/app/ventas/sell/sell-detail.component.html
@@ -25,45 +25,45 @@
         <form class="basic-form">
           <div fxLayout="row wrap">
             <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
+              <div style="background-color:#eee" fxLayout="column">
                 <span class="font-bold">Código de la Venta:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
+              <div style="margin-left: 5px" fxLayout="column">
                 <span>{{entity.codigo}}</span>
               </div>
             </div>
 
             <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
+              <div style="background-color:#eee" fxLayout="column">
                 <span class="font-bold">Cliente:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
+              <div style="margin-left: 5px" fxLayout="column">
                 <span>{{entity.clienteNombre}}</span>
               </div>
             </div>
 
             <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
+              <div style="background-color:#eee" fxLayout="column">
                 <span class="font-bold">Fecha:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
+              <div style="margin-left: 5px" fxLayout="column">
                 <span>{{entity.fecha}}</span>
               </div>
             </div>
 
             <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
+              <div style="background-color:#eee" fxLayout="column">
                 <span class="font-bold">Estado:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
+              <div style="margin-left: 5px" fxLayout="column">
                 <span>{{entity.estatus}}</span>
               </div>
             </div>
