--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -77,7 +77,7 @@
       <form class="basic-form">
         <!--<div fxLayout="row wrap">-->
           <div class="responsive-table">
-            <mat-table #table matSort [dataSource]="dataSourceProductosDetalles" class="mat-elevation-z8" style="max-height: 200px; overflow:auto;">
+            <mat-table #table matSort [dataSource]="dataSourceProductosDetalles" class="mat-elevation-z8" style="max-height: 264px; overflow:auto;">
 
               <ng-container matColumnDef="cantidad">
                 <mat-header-cell *matHeaderCellDef> Cant. </mat-header-cell>
@@ -171,7 +171,7 @@
       <!--<form class="basic-form">-->
 
         <div fxLayout="row wrap">
-          <div fxFlex.gt-xs="50" fxFlex="25" class="p-10" (click)="goStep('sell', null, null)" style="cursor: pointer">
+          <div fxFlex.gt-xs="50" fxFlex="25" class="p-12" (click)="goStep('sell', null, null)" style="cursor: pointer; text-align: left">
             <mat-icon>arrow_back</mat-icon>
             <span class="goBackTag">Regresar a la venta</span>
           </div>
@@ -184,7 +184,7 @@
         </div>
 
         <div fxLayout="row wrap">
-          <div class="p-10">
+          <div class="p-11">
             <div class="button-row">
               <button mat-raised-button style="width: 100%;" (click)="goStep('clientUpdate', 'new', null)">Agregar nuevo cliente</button>
             </div>
@@ -192,7 +192,7 @@
         </div>
 
         <!--<div fxLayout="row wrap">-->
-          <div class="responsive-table">
+          <div style="margin-top:45px" class="responsive-table">
             <mat-table #table matSort [dataSource]="dataSourceClientes" class="mat-elevation-z8">
 
               <ng-container matColumnDef="name">
@@ -225,7 +225,7 @@
   </mat-card>
 
   <mat-card *ngIf="stateStep === 'clientUpdate'" fxFlex.gt-lg="40" fxFlex.gt-md="40" fxFlex.gt-sm="40" fxFlex="100">
-    <mat-card-content style="height: 65%;">
+    <mat-card-content style="height: 100%;">
       <!--<form class="basic-form">
 
       <div fxLayout="row wrap">
