--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -48,7 +48,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="45" fxFlex.gt-md=42 fxFlex.gt-sm=40 fxFlex="100">
+  <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="45" fxFlex.gt-md=42 fxFlex.gt-sm=40 fxFlex="100" class="custom-box-items-selected">
     <mat-card-content style="    padding-bottom: 0;margin-bottom: 0;     padding-top: 0;">
         <div *ngIf="client.nombre === undefined" fxLayout="row wrap">
           <div style="display: flex; width: 100%"></div>
