--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -241,3 +241,9 @@ mat-footer-row, mat-header-row, mat-row {
   }
 
 }
+
+@media (max-width: 959px){
+  .custom-box-items-selected{
+    height: inherit;
+  }
+}
