--- a/frontend/src/app/layouts/full/full.component.html
+++ b/frontend/src/app/layouts/full/full.component.html
@@ -135,7 +135,7 @@
         <!-- ============================================================== -->
         <!-- Page container - style you can find in pages.scss -->
         <!-- ============================================================== -->
-        <mat-sidenav-content class="page-wrapper" style="overflow: hidden;">
+        <mat-sidenav-content class="page-wrapper page-wrapper-custom">
             
                 <div class="page-content">
 
